Still fixing the alignments.

--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -191,9 +191,9 @@
     }
     
 /* Utility for vertical centering main content */
-.center-vertical {
+/* .center-vertical {
     min-height: 70vh;
     display: flex;
     justify-content: center;
     align-items: center;
-}
+} */
